# sdk-nrfxlib

./: CMakeLists.txt  Kconfig.nrfxlib  README.rst  common.cmake  package.json
.github/: test-spec.yml
doc/: links.txt
mpsl/: CHANGELOG.rst  CMakeLists.txt  Kconfig
mpsl/fem/: CMakeLists.txt
mpsl/lib/cortex-m33+nodsp/soft-float/: manifest.yaml
mpsl/lib/cortex-m4/hard-float/: manifest.yaml
mpsl/lib/cortex-m4/soft-float/: manifest.yaml
mpsl/lib/cortex-m4/softfp-float/: manifest.yaml
mpsl/lib/nRF5420_CPUNET/soft-float/: manifest.yaml
mpsl/lib/nRF5420_CPUNET_FPGA/soft-float/: manifest.yaml
mpsl/lib/nRF5420_SOC1_CPUNET/soft-float/: manifest.yaml
mpsl/lib/nRF5420_SOC1_CPUNET_FPGA/soft-float/: manifest.yaml
mpsl/lib/nRF5420_SOC1_CPURAD/soft-float/: manifest.yaml
mpsl/lib/nRF54H20_CPURAD_FPGA/soft-float/: manifest.yaml
mpsl/lib/nRF54H20_CPURAD_SOC1/soft-float/: manifest.yaml
nemagfx/: CMakeLists.txt  Kconfig  LICENSE  README.rst
nemagfx/NemaDC/: CMakeLists.txt
nemagfx/NemaDC_SW/: CMakeLists.txt
nemagfx/NemaGFX/: CMakeLists.txt
nemagfx/NemaGFX_SW/: CMakeLists.txt
nemagfx/NemaGUI/: CMakeLists.txt
nemagfx/NemaVG/: CMakeLists.txt
nemagfx/include/tsi/NemaDC/: nema_dc_shim.h
nemagfx/include/tsi/NemaGFX/: nema_blender.h  nema_core.h  nema_easing.h  nema_hal.h  nema_math.h  nema_matrix4x4.h  nema_raster.h  nema_shim.h  nema_transitions.h
nemagfx/include/tsi/common/: nema_hal_ext.h  nema_sys_defs.h  tsi_malloc.h
nemagfx/zephyr/: module.yml
nfc/: CHANGELOG.rst
nfc/doc/: integration_notes.rst
nfc/include/: nfc_platform.h
nrf_802154/doc/: CHANGELOG.rst
nrf_802154/driver/: CMakeLists.txt
nrf_802154/driver/include/: nrf_802154.h  nrf_802154_config.h  nrf_802154_types.h
nrf_802154/driver/src/: nrf_802154.c  nrf_802154_accel_ccm.c  nrf_802154_accel_ecb.c  nrf_802154_core.c  nrf_802154_critical_section.c  nrf_802154_debug.c  nrf_802154_debug_assert.c  nrf_802154_debug_gpio.c  nrf_802154_encrypt.c  nrf_802154_nrfx_addons.h  nrf_802154_peripherals.h  nrf_802154_peripherals_alloc.c  nrf_802154_peripherals_haltium.h  nrf_802154_peripherals_nrf52.h  nrf_802154_peripherals_nrf53.h  nrf_802154_peripherals_nrf54l.h  nrf_802154_procedures_duration.h  nrf_802154_request_swi.c  nrf_802154_rssi.c  nrf_802154_trx.c  nrf_802154_trx.h  nrf_802154_trx_dppi.c  nrf_802154_trx_ppi.c  nrf_802154_utils.h
nrf_802154/internal/: CMakeLists.txt  Kconfig.nrfxlib
nrf_802154/internal/driver/src/: nrf_802154_aes_ccm_acc_ccm.c  nrf_802154_peripherals_haltium.h  nrf_802154_peripherals_nrf54l.h
nrf_802154/internal/driver/src/internal_includes/: nrf_802154_config_internal.h  nrf_802154_delayed_trx_internal.h  nrf_802154_peripherals_internal.h  nrf_802154_peripherals_nrf54h.h  nrf_802154_peripherals_nrf54l.h  nrf_802154_trx_internal.h
nrf_802154/internal/sl/internal_includes/: nrf_802154_sl_config_internal.h  nrf_802154_sl_periphs_internal.h
nrf_802154/internal/zephyr/: CMakeLists.txt  Kconfig.nrfxlib
nrf_802154/serialization/src/: nrf_802154_spinel_app.c  nrf_802154_spinel_dec_app.c
nrf_802154/sl/include/: nrf_802154_fal.h  nrf_802154_sl_ant_div.h  nrf_802154_sl_atomics.h  nrf_802154_sl_periphs.h  nrf_802154_sl_utils.h
nrf_802154/zephyr/: Kconfig.nrfxlib
nrf_security/: Kconfig.psa
nrf_security/cmake/: psa_crypto_config.cmake
nrf_security/configs/: nrf-config.h  psa_crypto_config.h.template
nrf_security/include/psa/: crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h
nrf_security/src/: CMakeLists.txt  psa_crypto_driver_wrappers.c  test_prng_random_ext.c
softdevice_controller/: CHANGELOG.rst  CMakeLists.txt  README.rst
softdevice_controller/include/: sdc.h
(+53 files in other folders)
